# simple-log-viewer

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs  main.tmp  readline.rs
core/: Cargo.toml
core/src/: fr.rs  lib.rs  mmap.rs  range.rs  searcher.rs
src/: fr.rs  main.rs  mmap.rs
