[package]
name = "simple-log-viewer"
version = "0.1.0"
authors = ["zido <wuhongxu1208@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#clap = "~2.27.0"
regex = "1"
lazy_static = "1.4.0"

#[dependencies.gtk]
#version = "0.9.0"
#features = ["v3_16"]
#
#[dependencies.gio]
#version = ""
#features = ["v2_44"]
