[package]
name = "slv_core"
version = "0.1.0"
authors = ["zido <wuhongxu1208@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1"
libc = "0.2"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["basetsd", "handleapi", "memoryapi","winnt", "minwindef", "std", "sysinfoapi"] }
[dev-dependencies]
rand = "0.7"
#[dependencies.gtk]
#version = "0.9.0"
#features = ["v3_16"]
#
#[dependencies.gio]
#version = ""
#features = ["v2_44"]
